--- a/about/index.html
+++ b/about/index.html
@@ -107,7 +107,7 @@
               <ul class="nav">
                 <li><a href="../">Home</a></li>
                 <li class="active"><a href="#">About</a></li>
-                 <li><a href="../contact">Contact</a></li>
+                 <li><a href="../admin">Admin Panel</a></li>
               </ul>
             </div>
           </div>
